    be used to override the default audio device driver (rec/play)
    and default audio device (all).  (robs)

Other bug fixes:

  o Fix [1890983] rec shortcut should apply bit depth (8-bit,
    16-bit, etc.) to input handler.  (robs)
  o Fix auto-detect of hcom files.  (robs)
  o Added auto-detect for caf, txw & sf files.  (robs)

Internal improvements:

  o Use FORTIFY_SOURCE with gcc.  (robs)
  o Fixed all compiler warnings (AFAICT).  (robs)

Deprecated features to be removed in future:

  Deprec-  Feature    [O(ption)]                           Removal
  ated in  [F(ormat)] [E(ffect)]   Replacement             due in
  -------  ----------------------  ----------------------  -------
  14.0.0   E stretch               ~= tempo                2008-09-11
  14.0.0   E pitch                 ~= key                  2008-09-11
  14.1.0   F wve (native)          wve (libsndfile)        14.1.0 + 1 year
  14.1.0   F flac: libFLAC 1.1.1   libFLAC > 1.1.1         14.1.0 + 6 months
  14.1.0   Behaviour whereby       soxi                    14.1.0 + 1 year
           sox -V file(s) -n
	   doesn't read to EOF.


sox-14.0.1	2008-01-29
----------

  File formats:

  o Added support for non-standard, non-WAVE_FORMAT_EXTENSIBLE
    (esp. 24-bit) PCM wav (see wavpcm in soxformat.7 for details).  (robs)

  Effects:

  o Reimplemented reverb to be similar to freeverb.  (robs)

  Bug fixes:

  o Fix Sndtool read error causing noise at start.  (Reynir Stefánsson)
  o Fix mixer with >4 numbers, and mixer -3 behaving as mixer -4.  (robs)
  o Fix [1748909] sox does not report remaining playtime of mp3s.  (robs)
  o Fix failure to read AIFF files with empty MARK chunk.  (robs)
  o Fix spurious 'Premature EOF' message in some circumstances.  (robs)
  o Switched to 16-bit for libao driver since not all its plugins
    support it (such as oss, nas, and pulse audio) (Morita Sho)
  o Stop crash when "rec" is run with no arguments (Morita Sho).